docs(big_data): L0-L5全栈课程资料勘误
对big_data课程库进行逐文件夹串行勘误，覆盖L0预备阶段至L5 CTO视野
共14个文件夹~90+个.md文件，修复计算错误、术语翻译、事实性错误、
格式笔误及逻辑不一致等问题。

主要修复类型:
- 计算错误(12处): ROI/达标率/回收期/工时等数值校算
  * ACP认证ROI 290%->240%(与5个月回收期一致)
  * 稳定运行率达标率104%->100%(99.7/99.5=100.2%)
  * 案例1 ROI补充利润率假设(7.5亿GMV按10%利润率折算)
  * Sheet2报表工时补充(5人)标注(5x4hx20天=400h)
  * Sheet3回收期表述修正(3年累计净亏8999万)
- 术语/翻译(6处): AQE规则名称、DDIA章节引用等
- 事实性错误(5处): PMI-ACP经验要求(2000h通用+1500h敏捷)
- 格式/笔误(8处): 预备金比例、数据准确性达标率等
- 逻辑不一致(5处): 评分标准占比、预算分配等

未修复(需作者设计决策):
- 系统设计题5自建机房3年TCO与年度成本之和差216万
- 能力模型5维(L5 README) vs 评定体系4维不一致
- 商业翻译训练PPT页数(5页设定 vs 6页脚本)